# APEX

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  APEX_Prompt.md  CLAUDE.md  CRITICAL_PATH_ANALYSIS.md  DEPLOYMENT_OPERATIONS_GUIDE.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  ENTERPRISE_TECHNICAL_SPECIFICATION.md  IT_INTEGRATION_REVIEW_SUMMARY.md  ImprovementPlan.md  LICENSE  PRIORITY_4_PLAN.md  PRODUCTION_READINESS.md  README.md  RUNBOOK.md  SECURITY_AUDIT.md  TASK_2.2_DATA_SOURCING.md  VALIDATION_REPORT.md  package-lock.json  pyproject.toml  validation_commands.sh
.githooks/: README.md  install-hooks.sh  pre-commit
.github/workflows/: README.md  ci-cd.yml
.serena/: project.yml
.serena/memories/: done_when_task_completed.md  project_overview.md  style_and_conventions.md  suggested_commands.md
alembic/: env.py
alembic/versions/: 20250115_add_background_jobs.py  20250115_add_cost_code_unit_costs.py
data/: cost_codes.csv
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  TECHNICAL_SPEC.md
docs/adr/: 001-background-jobs.md  002-guid-typedecorator.md  003-llm-maturity-aware-orchestration.md
docs/multi-tool-templates/: ARCHITECTURE_TEMPLATE.md  DEVELOPER_ARTIFACTS.md  LEADERSHIP_MATERIALS.md  PATTERN_OVERVIEW.md  TECHNICAL_SPECIFICATION_TEMPLATE.md
infra/: DISASTER_RECOVERY.md  INCIDENT_RESPONSE.md  MONITORING_AND_ALERTING.md  RUNBOOK.md  SECURITY_VALIDATION.md  deploy.sh  main.bicep
scripts/: import_cost_codes.py
tests/: conftest.py
(+66 files in other folders)
