[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex"
version = "0.1.0"
description = "APEX – AI-Powered Estimation Expert for utility T&D projects"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pyodbc>=5.0.0,<6.0.0",
    "azure-identity>=1.15.0,<2.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
    "azure-keyvault-secrets>=4.7.0,<5.0.0",
    "openai>=1.3.0,<2.0.0",
    "azure-ai-documentintelligence>=1.0.0,<2.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "SALib>=1.4.7,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "opencensus-ext-azure>=1.1.0,<2.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "PyJWT[crypto]>=2.8.0,<3.0.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
